--- a/week1/index.html
+++ b/week1/index.html
@@ -6,6 +6,33 @@
     <title>Form Demo</title>
 </head>
 <body>
+
+    <div>
+        <h3>Form</h3>
+         <form action="submit.php" method="post">
+
+            <label for="fullName"> Full Name:</label>
+            <input type="text" id="fullName" name="full name" placeholder="John Doe">
+            <br>
+
+            <label for="email">Email:</label>
+            <input type="text" name="email" id="email" placeholder="example@email.com">
+            <br>
+
+            <label for="telNumber">Telephone number:</label>
+            <input type="number" name="telephon number" id="telNumber" placeholder="012345678">
+            <br>
+
+            <br>
+
+
+
+
+            <input type="submit" value="Submit">
+
+        </form>
+    </div>
+
     
 </body>
 </html>
