--- a/week1/index.html
+++ b/week1/index.html
@@ -11,6 +11,8 @@
         <h3>Form</h3>
          <form action="submit.php" method="post">
 
+            <h4>Contact details</h4>
+
             <label for="fullName"> Full Name:</label>
             <input type="text" id="fullName" name="full name" placeholder="John Doe">
             <br>
@@ -25,7 +27,7 @@
 
             <br>
 
-
+            <h4></h4>
 
 
             <input type="submit" value="Submit">
