--- a/week1/index.html
+++ b/week1/index.html
@@ -8,7 +8,8 @@
 <body>
 
     <div>
-        <h3>Form</h3>
+        <h3>Sign Up Form</h3>
+        <p>Please fill the form bellow</p>
          <form action="submit.php" method="post">
 
             <h4>Contact details</h4>
@@ -25,9 +26,15 @@
             <input type="number" name="telephon number" id="telNumber" placeholder="012345678">
             <br>
 
+            <label for="dateOfBirth">Date of Bitrh</label>
+            <input type="date" name="date of birth" id="dateOfBirth" placeholder="1900.01.01">
             <br>
 
-            <h4></h4>
+            <br>
+
+            <h4>Other information about you</h4>
+
+
 
 
             <input type="submit" value="Submit">
