adding checkbox options

--- a/week1/index.html
+++ b/week1/index.html
@@ -27,14 +27,25 @@
             <br>
 
             <label for="dateOfBirth">Date of Bitrh</label>
-            <input type="date" name="date of birth" id="dateOfBirth" placeholder="1900.01.01">
+            <input type="date" name="date of birth" id="dateOfBirth">
             <br>
 
             <br>
 
             <h4>Other information about you</h4>
 
+            <h5>Favourite car/cars</h5>
+            <input type="checkbox" name="audi" id="audi">
+            <label for="audi">Audi</label>
+            <br>
 
+            <input type="checkbox" name="bmw" id="bmw">
+            <label for="bmw">BMW</label>
+            <br>
+            
+            <input type="checkbox" name="mercedes" id="mercedes">
+            <label for="mercedes">Mercedes</label>
+            <br>
 
 
             <input type="submit" value="Submit">
