--- a/week1/index.html
+++ b/week1/index.html
@@ -48,7 +48,9 @@
             <br>
 
 
-            <input type="submit" value="Submit">
+            <input type="reset"  id="restet" value="Reset">
+            <input type="submit" id="submit" value="Submit">
+            
 
         </form>
     </div>
