adding radio buttons for receiving newsletter

--- a/week1/index.html
+++ b/week1/index.html
@@ -48,6 +48,19 @@
             <br>
 
 
+            <h4>Would you like to receive a newsletter?</h4>
+
+            <input type="radio" name="radioBtn" value="yes" id="yes">
+            <label for="yes">Yes please!</label>
+            <br>
+
+            <input type="radio" name="radioBtn" value="no" id="no">
+            <label for="no">No thank you!</label>
+            <br>
+
+            <br>
+
+
             <input type="reset"  id="restet" value="Reset">
             <input type="submit" id="submit" value="Submit">
             
